@@ -61,10 +61,16 @@ $table->data[0][1] .= '<img src="images/spinner.png" /></span>';
 
 $table->data[1][0] = __('Template');
 $templates = get_alert_templates (false, array ('id', 'name'));
+
 $table->data[1][1] = print_select (index_array ($templates, 'id', 'name'),
 	'template', '', '', __('Select'), 0, true);
 $table->data[1][1] .= ' <a class="template_details invisible" href="#">
 	<img class="img_help" src="images/zoom.png" /></a>';
+
+$table->data[1][1] .= print_image ('images/add.png', true);
+$table->data[1][1] .= '<a href="index.php?sec=galertas&sec2=godmode/alerts/configure_alert_template">';
+$table->data[1][1] .= __('Create Template');
+$table->data[1][1] .= '</a>';
 
 $table->data[2][0] = __('Actions');
 
@@ -75,9 +81,9 @@ $table->data[2][1] = print_select($actions,'action_select','','','','',true);
 $table->data[2][1] .= ' <span id="action_loading" class="invisible">';
 $table->data[2][1] .= '<img src="images/spinner.png" /></span>';
 $table->data[2][1] .= ' <span id="advanced_action" class="advanced_actions invisible">';
-$table->data[2][1] .=  __('Number of alerts match from').' ';
+$table->data[2][1] .= __('Number of alerts match from').' ';
 $table->data[2][1] .= print_input_text ('fires_min', '', '', 4, 10, true);
-$table->data[2][1] .=  ' '.__('to').' ';
+$table->data[2][1] .= ' '.__('to').' ';
 $table->data[2][1] .= print_input_text ('fires_max', '', '', 4, 10, true);
 $table->data[2][1] .= print_help_icon ("alert-matches", true);
 $table->data[2][1] .= '</span>';
